[gd_scene load_steps=22 format=3 uid="uid://2x80e2b1nya3"]

[ext_resource type="Script" uid="uid://chdi1orfreq0o" path="res://scrips/fuelstation.gd" id="1_popmw"]
[ext_resource type="Texture2D" uid="uid://knjcljujqeop" path="res://Assents/sprites-Sheet.png" id="2_c84a5"]
[ext_resource type="Texture2D" uid="uid://hb4d6frro6ll" path="res://Assents/Free Smoke Fx  Pixel 07.png" id="3_lvhq2"]
[ext_resource type="AudioStream" uid="uid://drpjc5plkt0id" path="res://Assents/sound/collect-points-190037.mp3" id="4_c84a5"]
[ext_resource type="AudioStream" uid="uid://sqndxa4ebowu" path="res://Assents/sound/bigboom-42826.mp3" id="5_lvhq2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0p346"]
atlas = ExtResource("2_c84a5")
region = Rect2(144, 23, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j8yu"]
atlas = ExtResource("3_lvhq2")
region = Rect2(0, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lp2p"]
atlas = ExtResource("3_lvhq2")
region = Rect2(64, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8rkd"]
atlas = ExtResource("3_lvhq2")
region = Rect2(128, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vn1x"]
atlas = ExtResource("3_lvhq2")
region = Rect2(192, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6cd8"]
atlas = ExtResource("3_lvhq2")
region = Rect2(256, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_61681"]
atlas = ExtResource("3_lvhq2")
region = Rect2(320, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhlye"]
atlas = ExtResource("3_lvhq2")
region = Rect2(384, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b74ur"]
atlas = ExtResource("3_lvhq2")
region = Rect2(448, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k36wd"]
atlas = ExtResource("3_lvhq2")
region = Rect2(512, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfnvc"]
atlas = ExtResource("3_lvhq2")
region = Rect2(576, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsr66"]
atlas = ExtResource("3_lvhq2")
region = Rect2(640, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxs8v"]
atlas = ExtResource("3_lvhq2")
region = Rect2(704, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cua7x"]
atlas = ExtResource("3_lvhq2")
region = Rect2(768, 768, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vh5oh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p346")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j8yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lp2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8rkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vn1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6cd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61681")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhlye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b74ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k36wd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfnvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsr66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxs8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cua7x")
}],
"loop": false,
"name": &"fuel explosion",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_popmw"]
size = Vector2(29, 59)

[node name="fuelstation" type="Area2D"]
collision_layer = 16
script = ExtResource("1_popmw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.768627, 0, 0, 1)
self_modulate = Color(0.958718, 0.586983, 1, 1)
position = Vector2(-4.76837e-07, 0)
scale = Vector2(2.78945, 1.7898)
sprite_frames = SubResource("SpriteFrames_vh5oh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_popmw")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_c84a5")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_lvhq2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
